# QtDemo

./: CMakeLists.txt  README.MD  REDIS_INSTALL.md  auto-build.sh
src/client/: CMakeLists.txt  QChatMessage.cpp  QChatMessage.h  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp
src/client/image/: blue.css
